Updated HTML pages with final content and layout fixes

--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
   <section class="page-section">
     <h1>Contact Information</h1>
     <p>
-      To reach the project creator, please use the form below.  
-      (Note: This form is non-functional and included only for assignment structure.)
+
+      (Note: This form is nonfunctional and included only for assignment requirements.)
     </p>
 
     <form class="contact-form">
