--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h1>Welcome to my SDP SGA2 Demo</h1>
     <p>
       This website is created by Heather Herman (2023ebcs142) as part of the Software Development Practices (SDP)
-      staff-graded assignment 2. It demonstrates basic version control usage, simple webpage structure, and Docker.
+      staff-graded assignment 2.
     </p>
     <p>
       <strong>Name:</strong> Heather Herman<br>
